--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
@@ -450,6 +450,7 @@
             var currentData = {};
 
             loadData('tab-1', '全部', 1, "10");
+            loadData('tab-2', '全部', 1, "10");
             ChangeCurrency('tab-1');
 
             function findSortingColumns() {
