--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/eFirstChoice/eFirstChoice.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/eFirstChoice/eFirstChoice.cshtml
@@ -116,7 +116,7 @@
                             </tr>
                         </thead>
                         <tbody id="result">
-                            @foreach (var item in Model.eFirstFunds)
+                            @foreach (var item in Model.EFirstFunds)
                             {
                                 <tr class="c-cardTable__item u-nowrap@dt-only u-center@dt-only">
                                     <td class="c-cardTable__top"></td>
