--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/eFirstChoice/eFirstChoiceReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/eFirstChoice/eFirstChoiceReturnView.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Feature.Wealth.Component.Models.eFirstChoice
 @model eFirstChoiceModel
 
-@foreach (var item in Model.eFirstFunds)
+@foreach (var item in Model.EFirstFunds)
 {
     <tr class="c-cardTable__item u-nowrap@dt-only u-center@dt-only">
         <td class="c-cardTable__top"></td>
