--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Foundation.Wealth.Helper
-@using Feature.Wealth.Component.Models.eFirstChoice
-@model eFirstChoiceModel
+@using Feature.Wealth.Component.Models.EFirstChoice
+@model EFirstChoiceModel
 
 @{
     var modelitem = Model.Item;
