--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoiceReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoiceReturnView.cshtml
@@ -1,5 +1,5 @@
-﻿@using Feature.Wealth.Component.Models.eFirstChoice
-@model eFirstChoiceModel
+﻿@using Feature.Wealth.Component.Models.EFirstChoice
+@model EFirstChoiceModel
 
 @foreach (var item in Model.EFirstFunds)
 {
