--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Feature.Wealth.Component.Models.ETF.Search.EtfSearchResultModel
 @{
+    if (Model == null)
+    {
+        return;
+    }
     // TODO: 網址要改
     var detailPage = "#";
 }
