--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
@@ -891,7 +891,7 @@
                             </div>
                         </td>
                         <td class="c-cardTable__footer" data-card-table-width="1/3">
-                            @if (product.OnlineSubscriptionAvailability?.ToUpper() == "Y")
+                            @if (product.CanOnlineSubscription)
                             {
                                 <div class="c-cardTable__content"><a href="#popupPurchase" class="o-tableBtn o-tableBtn--card@lt" data-popup="true">申購</a></div>
                             }
