--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -136,6 +136,7 @@
             "/themes/vendor/swiper/swiper-bundle.min.js",
             "/themes/vendor/highcharts/highstock.js",
             "/themes/vendor/highcharts/modules/accessibility.js",
+            "/themes/vendor/highcharts/indicators/indicators-all.js",
             "/themes/vendor/aso/aos.js",
             "/themes/vendor/datatables/datatables.min.js",
             "/themes/js/extensions/aso-initialize.js",
