--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AnnouncementsAndWarnings/MoreAnnouncements.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AnnouncementsAndWarnings/MoreAnnouncements.cshtml
@@ -18,7 +18,7 @@
                                 <p class="c-feature__desc">@Html.Sitecore().Field(Templates.MoreAnnouncement.Fields.Description.ToString(), Model.Item)</p>
                             </div>
                             <div class="c-feature__plate">
-                                <img src="@Model.ImageUrl" srcset="@Model.Image3xUrl" alt="" class="c-feature__img">
+                                <img src="@Model.ImageUrl" srcset="" alt="" class="c-feature__img">
                             </div>
                         </div>
                     </li>
