Update: #D15 #D16刪除3x圖片

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/VideoCarousel/VideoCarousel.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/VideoCarousel/VideoCarousel.cshtml
@@ -43,13 +43,13 @@
                                                     @if (item.CheckedOpenVideoLinkinLightBox)
                                                     {
                                                         <a href="@item.LinkUrl" class="c-gridview__media @icon" target="_blank">
-                                                            <img src="@item.ImageUrl" class="c-gridview__img" srcset="@item.Image3xUrl" alt="">
+                                                            <img src="@item.ImageUrl" class="c-gridview__img" srcset="" alt="">
                                                         </a>
                                                     }
                                                     else
                                                     {
                                                         <a class="c-gridview__media @icon" target="_blank">
-                                                            <img src="@item.ImageUrl" class="c-gridview__img" srcset="@item.Image3xUrl" alt="">
+                                                            <img src="@item.ImageUrl" class="c-gridview__img" srcset="" alt="">
                                                         </a>
                                                     }
                                                     <div class="c-gridview__anv">
@@ -76,13 +76,13 @@
                                                         @if (item1.CheckedOpenVideoLinkinLightBox)
                                                         {
                                                             <a href="@item1.LinkUrl" class="c-gridview__media @icon1" target="_blank">
-                                                                <img src="@item1.ImageUrl" class="c-gridview__img" srcset="@item1.Image3xUrl" alt="">
+                                                                <img src="@item1.ImageUrl" class="c-gridview__img" srcset="" alt="">
                                                             </a>
                                                         }
                                                         else
                                                         {
                                                             <a class="c-gridview__media @icon1" target="_blank">
-                                                                <img src="@item1.ImageUrl" class="c-gridview__img" srcset="@item1.Image3xUrl" alt="">
+                                                                <img src="@item1.ImageUrl" class="c-gridview__img" srcset="" alt="">
                                                             </a>
                                                         }
                                                         <div class="c-gridview__anv">
